# mybuild

./: README.txt
bzip2/: libbz2.sln  libbz2.vcxproj  makefile.msc
freetype/: CMakeLists.txt  ChangeLog  ChangeLog.20  ChangeLog.21  ChangeLog.22  ChangeLog.23  ChangeLog.24  ChangeLog.25  ChangeLog.26  ChangeLog.27  ChangeLog.28  ChangeLog.29  Jamfile  Jamrules  Makefile  README.git  autogen.sh  configure  modules.cfg  vms_make.com
freetype/builds/: detect.mk  exports.mk  freetype.mk  link_dos.mk  link_std.mk  modules.mk  toplevel.mk
freetype/devel/: ftoption.h
freetype/docs/: DOCGUIDE  INSTALL  INSTALL.ANY  INSTALL.CROSS  INSTALL.GNU  INSTALL.UNIX  INSTALL.VMS  VERSIONS.TXT  formats.txt  freetype-config.1  raster.txt  release
giflib/: Makefile.vc  dgif_lib.c  egif_lib.c  getarg.c  getarg.h  getopt.c  getopt.h  gif2rgb.c  gif_font.c  gif_lib.h  gif_stdbool.h  gifbg.c  gifbuild.c  gifclrmp.c  gifcolor.c  gifecho.c  giffix.c  gifhisto.c  gifinto.c  giftext.c  giftool.c  gifwedge.c  qprintf.c
giflib/lib/: Makefile.vc  dgif_lib.c  egif_lib.c  gif_lib.h
gs1-syntax-engine/src/c-lib/: CMakeLists.txt  makefile.vcwin32
leptonica/src/: affine.c  bilinear.c  environ.h  liblept.rc  makefile.vc  pix1.c  pixcomp.c  projective.c  regutils.c  rotate.c  scale.c  utils.c
libjpeg/: apps.sln  cjpeg.vcxproj  djpeg.vcxproj  jpeg.sln  jpeg.vcxproj  jpegtran.vcxproj  rdjpgcom.vcxproj  wrjpgcom.vcxproj
libtiff/: nmake.opt
libtiff/PaxHeaders.14842/: CMakeLists.txt  COPYRIGHT  ChangeLog  HOWTO-RELEASE  Makefile.am  Makefile.in  Makefile.vc  README.md  RELEASE-DATE  SConstruct  TODO  VERSION  aclocal.m4  autogen.sh  build  config  configure  configure.ac  configure.com  contrib  html  libtiff  libtiff-4.pc.in  m4  man  nmake.opt  port  test  tools
libtiff/libtiff/: Makefile.vc  (+1 more)
libwebp/: Makefile.vc
libzip/: CMakeLists.txt
openssl/: ndk_setup.sh
openssl102/: android.sh
pcre/: pcregrep.c
pixman/: Makefile.win32.common
python27/: android.sh  android1.sh  cleanup.sh  ndk_setup.sh
release/: libwebp.rar
zint/: Makefile  readme-vsx.txt  zint.nsi
(+940 files in other folders)
